# 3DEngine

./: .gitignore  CMakeLists.txt  CopySDL.cmake  TODO
engine/: CMakeLists.txt
engine/Assets/: Button.h  DragField.h  IComponent.h  Slider.h  textField.h
engine/Math/Vectors/: mat4.cpp  vec3.cpp  vec4.cpp
engine/core/: Core.h
engine/core/3D/: bufferRenderer2D.cpp  bufferRenderer2D.h  camera.cpp  camera.h  mesh.cpp  mesh.h  renderer_3D.cpp  renderer_3D.h
engine/core/Audio/: audioData.h  wavLoader.h  waveformGenerator.h
engine/core/General/: audioSystem.cpp  audioSystem.h  bitmapFont.h  image.cpp  image.h  inputManager.cpp  inputManager.h  renderer_2D.cpp  renderer_2D.h  window.cpp  window.h
engine/core/Header/: Camera.h  Debug.h  Interfaces.h  Renderer_2D.h  Renderer_3D.h  VectorUtil.h  mesh.h
engine/core/LEGACY/: debug.h  windowOLD.cpp
engine/core/Sources/: Camera.cpp  Colors.cpp  Renderer_2D.cpp  Renderer_3D.cpp  VectorUtil.cpp  mesh.cpp
engine/core/header/: Logger.h  bitmapFont.h  bufferRenderer2D.h  camera.h  colors.h  image.h  inputManager.h  mesh.h  renderer_2D.h  renderer_3D.h  window.h
engine/core/meshUtil/: mesh.cpp  mesh.h
engine/core/sources/: bitmapFont.cpp  bufferRenderer2D.cpp  camera.cpp  image.cpp  inputManager.cpp  mesh.cpp  renderer_2D.cpp  renderer_3D.cpp  window.cpp
engine/core/util/: Logger.h  colors.h
engine/interface/: EngineContext.h  GameContainer.cpp  GameContainer.h  IGame.h
engine/math/Vectors/: VectorUtil.h  mat4.cpp  mat4.h  vec2.cpp  vec3.cpp  vec4.cpp  vector.h
engine/window/: Window.cpp  Window.h
lib/: stb_image.h
src/: main.cpp
src/Tester/: AudioTest.h  Test3DGame.cpp  Test3DGame.h  TestComponentsGame.h  TestGame.cpp  TestGame.h  Tester.cpp  Tester.h
